[package]
name = "proto_array"
version = "0.2.0"
authors = ["Paul Hauner <paul@sigmaprime.io>"]
edition = "2021"

[[bin]]
name = "proto_array"
path = "src/bin.rs"

[dependencies]
types = { path = "../types" }
eth2_ssz = { path = "../../consensus/ssz" }
eth2_ssz_derive = "0.3.0"
serde = "1.0.116"
serde_derive = "1.0.116"
serde_yaml = "0.8.13"
